--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,25 @@
-.App {
+body {
+  font-family: 'Lato', sans-serif;
+}
+
+.nav-wrapper {
+  padding: 0 .75rem .5rem;
+  margin-top: .75rem;
+}
+
+nav.top-nav .brand-logo {
+  font-weight: 300;
+  font-size: 1.6rem;
+}
+
+.sidenav-logo {
+  line-height: 64px;
   text-align: center;
+  font-size: 2.4rem;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+@media (min-width: 992px) {
+  main {
+    padding-left: 300px;
+  }
 }
