--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,32 @@ nav.top-nav .brand-logo {
     padding-left: 300px;
   }
 }
+
+.App {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.App main {
+  flex: 1 0 auto;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.App main > .row {
+  flex: 1 0 0;
+  width: 100%;
+}
+
+.App main > footer {
+  flex: 0 1 0;
+}
+
+footer .footer-content {
+  padding: 0 1rem;
+}
+
+footer.page-footer .footer-copyright {
+  justify-content: center;
+}
