--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,8 @@ footer .footer-content {
 footer.page-footer .footer-copyright {
   justify-content: center;
 }
+
+.usage-guide .btn.z-depth-0 {
+  padding: 0 1rem;
+  margin: 0 .25rem;
+}
