--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,37 @@ footer.page-footer .footer-copyright {
 [draggable="true"] {
   cursor: move !important;
 }
+
+.datepicker-container .datepicker-table td.has-event {
+  color: #03a9f4;
+}
+
+.datepicker-container .datepicker-table td.has-event button {
+  font-weight: 700;
+}
+
+.datepicker-container .datepicker-table td.is-today {
+  background-color: #eee;
+}
+
+.datepicker-container .datepicker-table td.is-selected {
+  background-color: #03a9f4;
+  color: #fff;
+}
+
+.datepicker-container .datepicker-date-display {
+  background: #03a9f4;
+}
+
+.datepicker-container .datepicker-cancel,
+.datepicker-container .datepicker-clear,
+.datepicker-container .datepicker-today,
+.datepicker-container .datepicker-done {
+  color: #03a9f4;
+}
+
+.datepicker-container .month-prev:focus,
+.datepicker-container .month-next:focus {
+  background-color: #03a9f4;
+  color: #fff;
+}
